# caeli

./: .gitignore  .travis.yml  Cargo.toml  README.md
data/: default_shader.jbb  default_texture.jbb  fallback_texture.jbb  music.jbb  note_texture.jbb  sound.jbb  white_texture.jbb
data/shaders/: default_shader.frag  default_shader.vert
src/: graphics.rs  lib.rs  main.rs
